Fixed Social Logos in Footer on iPhone

--- a/public/stylesheets/jumbotron.css.scss
+++ b/public/stylesheets/jumbotron.css.scss
@@ -109,8 +109,10 @@
       }
 
       .medium-img {
-        width: 45px;
-        height: 45px;
+        img {
+          width: 45px;
+          height: 45px;
+        }
       }
     }
   }
